version/0.3/_sources/api/ansys/sam/sysml2/api/sysml2_api_connector/SysML2APIConnector.rst.txt






:class:`SysML2APIConnector`
===========================


.. py:class:: ansys.sam.sysml2.api.sysml2_api_connector.SysML2APIConnector

   Bases: :py:obj:`abc.ABC`


   
   Provides the SysML2 API Connector interface.
















   ..
       !! processed by numpydoc !!












.. py:currentmodule:: SysML2APIConnector

Overview
--------

.. tab-set::

   .. tab-item:: Abstract methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~get_projects`
            - Get all projects of the connected user.
          * - :py:attr:`~get_project_by_id`
            - Get project information for the given ID.
          * - :py:attr:`~create_project`
            - Create a project with the associated name and description.
          * - :py:attr:`~delete_project`
            - Delete the project with the given ID.
          * - :py:attr:`~update_project`
            - Update the project with the given ID.
          * - :py:attr:`~get_all_elements`
            - Get all elements of the given project.
          * - :py:attr:`~get_element_by_id`
            - Get an element by ID and return its information.
          * - :py:attr:`~get_root_elements`
            - Get all root elements of the project.
          * - :py:attr:`~execute_query`
            - Send a query to the standard API using the connector.
          * - :py:attr:`~create_commit`
            - Send a commit, provided as a JSON string, to the standard API.










Import detail
-------------

.. code-block:: python

    from ansys.sam.sysml2.api.sysml2_api_connector import SysML2APIConnector



Method detail
-------------

.. py:method:: get_projects() -> list
   :abstractmethod:


   
   Get all projects of the connected user.
















   ..
       !! processed by numpydoc !!

.. py:method:: get_project_by_id(project_id: str) -> dict
   :abstractmethod:


   
   Get project information for the given ID.
















   ..
       !! processed by numpydoc !!

.. py:method:: create_project(project_name: str, project_description: str = 'Project description') -> dict
   :abstractmethod:


   
   Create a project with the associated name and description.


   :Parameters:

       **project_name** : :class:`python:str`
           Name of the project.

       **project_description** : :class:`python:str`, default: ``"Project description"``
           Description of the project.



   :Returns:

       :class:`python:dict`
           Project record.











   ..
       !! processed by numpydoc !!

.. py:method:: delete_project(project_id: str) -> dict
   :abstractmethod:


   
   Delete the project with the given ID.


   :Parameters:

       **project_id** : :class:`python:str`
           ID of the project to delete.



   :Returns:

       :class:`python:dict`
           Confirmation containing ``@type`` and ``@id`` of the deleted project.











   ..
       !! processed by numpydoc !!

.. py:method:: update_project(project_id: str, project_name: str = None, project_description: str = None) -> dict
   :abstractmethod:


   
   Update the project with the given ID.


   :Parameters:

       **project_id** : :class:`python:str`
           ID of the project to update.

       **project_name** : :class:`python:str`, :obj:`optional`
           New name for the project.

       **project_description** : :class:`python:str`, :obj:`optional`
           New description for the project.



   :Returns:

       :class:`python:dict`
           Updated project record.











   ..
       !! processed by numpydoc !!

.. py:method:: get_all_elements(project_id: str) -> list
   :abstractmethod:


   
   Get all elements of the given project.
















   ..
       !! processed by numpydoc !!

.. py:method:: get_element_by_id(project_id: str, element_id: str) -> dict
   :abstractmethod:


   
   Get an element by ID and return its information.


   :Parameters:

       **project_id** : :class:`python:str`
           ID of the project where the element is located.

       **element_id** : :class:`python:str`
           ID of the wanted element.



   :Returns:

       :class:`python:dict`
           Information of the element.











   ..
       !! processed by numpydoc !!

.. py:method:: get_root_elements(project_id: str) -> list
   :abstractmethod:


   
   Get all root elements of the project.
















   ..
       !! processed by numpydoc !!

.. py:method:: execute_query(project_id: str, query: str) -> dict
   :abstractmethod:


   
   Send a query to the standard API using the connector.


   :Parameters:

       **project_id** : :class:`python:str`
           Project ID.

       **query** : :class:`python:str`
           Query in JSON format.



   :Returns:

       :class:`python:dict`
           Result of the query.











   ..
       !! processed by numpydoc !!

.. py:method:: create_commit(project_id: str, commit: str) -> dict
   :abstractmethod:


   
   Send a commit, provided as a JSON string, to the standard API.


   :Parameters:

       **project_id** : :class:`python:str`
           Project ID.

       **commit** : :class:`python:str`
           Commit, in JSON format.



   :Returns:

       :class:`python:dict`
           Result of the commit.











   ..
       !! processed by numpydoc !!




